methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean=false
  
 for (i <1to6){
   avance(){ 
     
   if (estSurBiscuit()){
    vuBiscuit=true
   }
 for(l< to 6){
   recule()
 }
 
 }
  
  
  